# unibuc-fmi

./: .gitignore  .gitmodules  README.md
1-2-baze-de-date/proiect-liga-baschet/: insert-sql.txt  project-ex.txt
1-2-limbaje-formale-si-automate/proiect/: DFA.cpp  DFA.h  LambdaNFA.cpp  NFA.cpp  Regex.cpp  main.cpp
1-2-programarea-orientata-obiect/Cursuri/: Exemplu utilizare move constructor si move asignment (2).cpp  curs 7 si 8 - seria 13.cpp  curs 9 - intro clase template.cpp  curs1_POO_2022-2023.pptx  curs3_POO_2022-2023.pptx  curs4&5_POO_2022-2023.pptx  curs7 - seria15.cpp  curs9_POO_2022-2023.pptx
1-2-programarea-orientata-obiect/examen-mai-2023/: 132_Dumitrescul_EduardValentin.cpp  CMakeLists.txt
1-2-programarea-orientata-obiect/proiect2-healthcare/: CMakeLists.txt  Data.h  Date.h  Demo.cpp  DrawingUtil.h
1-2-programarea-orientata-obiect/proiect2-healthcare/people/: Doctor.cpp  Doctor.h  Patient.cpp
1-2-programarea-orientata-obiect/proiect2-healthcare/treatment/: CrashTreatment.h  FirstAidTreatment.cpp  FirstAidTreatment.h  SurgeryTreatment.cpp  Treatment.cpp  Treatment.h
1-2-programarea-orientata-obiect/proiect3-laborator-poo/: CMakeLists.txt  Data.h  Database.h  Game.h  Grade.h  IOInterface.h  Project2.h  Project3.h  Student.h  main.cpp
1-2-structuri-de-date/tema2-binomial-heap/: BinomialHeap.cpp
1-2-structuri-de-date/tema3-probleme/: loto.cpp  paranteze.cpp  pariuri.cpp  planeta.cpp  plantatie.cpp  schi.cpp  stramosi.cpp  timbre.cpp
2-2-fundamentele-limbajelor-de-programare/: 8.hs
2-2-metode-dezv-software/: obsessing-over-clean-code.docx
(+570 files in other folders)
